    (closes: 726597)
  * Fix detection when multiarch packages are reported by dpkg as
    disappeared Packages
  * test/integration/run-tests: output the failed test names
  * Code Cleanup in pkgDPkgPM
  * prepare next ABI via #if (APT_PKG_MAJOR >= 4 && APT_PKG_MINOR >= 13)
  * add new pid_t ExecFork(std::set<int> KeepFDs)
  * Avoid flickering when "apt-get -o DpkgPM::Progress-Fancy=1" is use

 -- Michael Vogt <mvo@debian.org>  Fri, 01 Nov 2013 10:03:06 +0100

apt (0.9.12.1) unstable; urgency=low

  [ Michael Vogt ]
  * do not send pkgname:arch over the APT::Status-Fd to not break
    clients (closes: 726156). A new APT::Status-deb822-Fd will be
    used to fix this.
  * add integration tests for APT::Status-Fd
  * add missing _() around the new "Progress" string

  [ David Kalnischkies ]
  * fix progress-segfault in case of dpkg errors/prompts (Closes: 726047)

 -- Michael Vogt <mvo@debian.org>  Tue, 15 Oct 2013 18:25:51 +0200

apt (0.9.12) unstable; urgency=low

  [ Christian Perrier ]
  * Fix typo in apt-private/private-show.cc. Thanks to Benjamin
    Keresa. Closes: #724073
  
  [ Mark Hymers ]
  * fix libapt-inst for >2G debs (closes: #725483)

  [ David Kalnischkies ]
  * don't strip :any from dependencies in single-arch (Closes: 723586)
  * pkg from only trusted sources keeps being trusted (Closes: 617690)
  * compression-neutral message for missing data.tar member (Closes: 722710)
  * print-uris prints regardless of quiet-level again (Closes: 722207)
  * retry without partial data after a 416 response (Closes: 710924)
  * replace "filesize - 1" trick in http with proper 416 handling
  * fix partial (206 and 416) support in https
  * handle complete responses to https range requests (Closes: 617643, 667699)
    (LP: 1157943)
  * don't consider holds for autoremoval (Closes: 724995)
  * put fetch errors in 'source' on our errorstack
  * use pkgAcqArchive in 'download' for proper errors
  * fix lzma-support detection via xz binary